fixed mainPost margin on mobile devices

--- a/website/private/structure/mainPost.module.css
+++ b/website/private/structure/mainPost.module.css
@@ -7,7 +7,7 @@
 }
 @media (max-aspect-ratio: 1/1) {
   .marked {
-    padding-left: 0;
-    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
